syntax = "proto3";

package org.project_planton.provider.aws.awsiamuser.v1;

import "buf/validate/validate.proto";
import "org/project-planton/provider/aws/awsiamuser/v1/spec.proto";
import "org/project-planton/provider/aws/awsiamuser/v1/stack_outputs.proto";
import "org/project-planton/shared/metadata.proto";

// AwsIamUser represents a containerized application deployed on AWS ECS.
// This resource manages ECS services that can run on either Fargate or EC2.
message AwsIamUser {
  // api-version must be set to "aws.project-planton.org/v1".
  string api_version = 1 [(buf.validate.field).string.const = "aws.project-planton.org/v1"];

  // resource-kind for this ECS service resource, typically "AwsIamUser".
  string kind = 2 [(buf.validate.field).string.const = 'AwsIamUser'];

  // metadata captures identifying information (name, org, version, etc.)
  // and must pass standard validations for resource naming.
  org.project_planton.shared.CloudResourceMetadata metadata = 3 [(buf.validate.field).required = true];

  // spec holds the core configuration data defining how the ECS service is deployed.
  AwsIamUserSpec spec = 4 [(buf.validate.field).required = true];

  // status holds runtime or post-deployment information.
  AwsIamUserStatus status = 5;
}

// AwsIamUserStatus describes the status fields for an ECS service resource.
message AwsIamUserStatus {
  // stack_outputs captures the outputs returned by Pulumi/Terraform after provisioning.
  AwsIamUserStackOutputs outputs = 1;
}
